--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
           <div class="scroll-item active">
             <h4 class="scroll-num">01</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#home" id="navBtn1"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn1" class="scroll-circle"></span></a>
               <span class="scroll-location">Home</span>
             </div>
           </div>
@@ -46,7 +46,7 @@
           <div class="scroll-item dark">
             <h4 class="scroll-num">02</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#about" id="navBtn2"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn2" class="scroll-circle"></span></a>
               <span class="scroll-location">About us</span>
             </div>
           </div>
@@ -54,7 +54,7 @@
           <div class="scroll-item">
             <h4 class="scroll-num">03</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#services" id="navBtn3"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn3" class="scroll-circle"></span></a>
               <span class="scroll-location">Services</span>
             </div>
           </div>
@@ -62,7 +62,7 @@
           <div class="scroll-item">
             <h4 class="scroll-num">04</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#portfolio" id="navBtn4"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn4" class="scroll-circle"></span></a>
               <span class="scroll-location">Portfolio</span>
             </div>
           </div>
@@ -70,7 +70,7 @@
           <div class="scroll-item dark">
             <h4 class="scroll-num">05</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#blog" id="navBtn5"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn5" class="scroll-circle"></span></a>
               <span class="scroll-location">Blog</span>
             </div>
           </div>
@@ -78,7 +78,7 @@
           <div class="scroll-item">
             <h4 class="scroll-num">06</h4>
             <div class="scroll-info">
-              <a class="main-menu" href="#contact" id="navBtn6"><span class="scroll-circle"></span></a>
+              <a class="main-menu" href="#" ><span id="navBtn6" class="scroll-circle"></span></a>
               <span class="scroll-location">Contact</span>
             </div>
           </div>
